--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -9,4 +9,10 @@
     android:enabled="true"
     android:icon="@drawable/ic_notifications"
     android:title="@string/nav_rail_notifications"/>
+
+<item
+    android:id="@+id/pageSettings"
+    android:enabled="true"
+    android:icon="@drawable/ic_settings_24"
+    android:title="@string/nav_rail_settings"/>
 </menu>
